sumo/tests/sumo/errors/routes/false_route2/errors.sumo
Error: Attribute 'route' in definition of a vehicle is empty.
Error: Vehicle '0' has no route.
Quitting (on error).
